crates/server/tests/snapshots/replay__user_set_watched_series.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": null,
  "status": 204
}
