crates/server/tests/snapshots/replay__user_state_batch.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": [
    {
      "completed": false,
      "favorite": false,
      "title": {
        "id": "m1",
        "type": "movie"
      },
      "watched": false,
      "watchlisted": false
    }
  ],
  "status": 200
}
