crates/server/tests/snapshots/replay__user_state_batch_forbidden.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "forbidden",
      "message": "not permitted for this user"
    }
  },
  "status": 403
}
