crates/server/tests/snapshots/replay__user_state_rollup.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": [
    {
      "completed": false,
      "target": {
        "id": "s1",
        "type": "series"
      },
      "total_episodes": 1,
      "watched": false,
      "watched_episodes": 0
    },
    {
      "completed": false,
      "target": {
        "id": "se1",
        "type": "season"
      },
      "total_episodes": 1,
      "watched": false,
      "watched_episodes": 0
    }
  ],
  "status": 200
}
