crates/server/tests/snapshots/replay__users_create.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "bitrate_cap": null,
    "concurrent_stream_limit": null,
    "created_at": "[created_at]",
    "id": "[id]",
    "max_content_rating": null,
    "preferred_audio": [],
    "preferred_subtitle": [],
    "role": "player",
    "username": "newbie"
  },
  "status": 201
}
