crates/server/tests/snapshots/replay__users_list.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "bitrate_cap": null,
        "concurrent_stream_limit": null,
        "created_at": "2023-11-14T22:13:20Z",
        "id": "admin",
        "max_content_rating": null,
        "preferred_audio": [],
        "preferred_subtitle": [],
        "role": "admin",
        "updated_at": "2023-11-14T22:13:20Z",
        "username": "admin"
      },
      {
        "bitrate_cap": null,
        "concurrent_stream_limit": null,
        "created_at": "2023-11-14T22:13:20Z",
        "id": "u1",
        "max_content_rating": null,
        "preferred_audio": [],
        "preferred_subtitle": [],
        "role": "user",
        "updated_at": "2023-11-14T22:13:20Z",
        "username": "user"
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 2
  },
  "status": 200
}
