crates/server/tests/snapshots/replay__version_detail.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "audio": [
      {
        "bitrate": 128000,
        "channels": 2,
        "codec": "aac",
        "index": 1,
        "language": "en"
      }
    ],
    "available": true,
    "chapters": [],
    "container": "mp4",
    "duration_ms": 100000,
    "edition": null,
    "id": "[id]",
    "library_id": "lib1",
    "markers": {
      "credits": [],
      "intro": []
    },
    "quality": "sd",
    "size_bytes": 1,
    "subtitles": [
      {
        "default": true,
        "forced": false,
        "format": "srt",
        "index": 1,
        "language": "en"
      }
    ],
    "title": {
      "id": "m1",
      "type": "movie"
    },
    "trickplay": [],
    "video": [
      {
        "bit_depth": 8,
        "bitrate": 4000000,
        "codec": "h264",
        "frame_rate": 24.0,
        "hdr": null,
        "height": 1080,
        "index": 0,
        "width": 1920
      }
    ]
  },
  "status": 200
}
