crates/server/tests/snapshots/replay__version_detail_admin.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "added_at": "[added_at]",
    "audio": [
      {
        "bitrate": 128000,
        "channels": 2,
        "codec": "aac",
        "index": 1,
        "language": "en"
      }
    ],
    "available": true,
    "chapters": [],
    "container": "mp4",
    "duration_ms": 100000,
    "id": "[id]",
    "library_id": "lib1",
    "markers": {
      "credits": [],
      "intro": []
    },
    "path": "/media/v1.mp4",
    "quality": "sd",
    "size_bytes": 1,
    "subtitle_files": [
      {
        "format": "srt",
        "id": "v1-en",
        "label": null,
        "language": "en",
        "pinned": false,
        "source": "external"
      }
    ],
    "subtitles": [
      {
        "default": true,
        "forced": false,
        "format": "srt",
        "index": 1,
        "language": "en"
      }
    ],
    "title": {
      "id": "m1",
      "type": "movie"
    },
    "trickplay": [],
    "updated_at": "[updated_at]",
    "video": [
      {
        "bit_depth": 8,
        "bitrate": 4000000,
        "codec": "h264",
        "frame_rate": 24.0,
        "hdr": null,
        "height": 1080,
        "index": 0,
        "width": 1920
      }
    ]
  },
  "status": 200
}
